libs/@local/hashql/ast/tests/ui/lower/expander/import-resolver/unresolver-variable.jsonc
//@ run: fail
//@ description: Tests that unresolved variables have specialized error messages
[
  "use",
  "core::math",
  { "#struct": { "add": "fooo" } },
  [
    "let",
    "foo",
    { "#literal": 42 },
    "föo"
    //~^ ERROR cannot find value `föo` in this scope
  ]
]
